roles/extensions/files/server-example/yaml/impush-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: impush
  namespace: default
  lables:
    group: pt
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: impushmonitor.potato.im
    http:
      paths:
      - backend:
          serviceName: impush
          servicePort: 8000
